--- a/HTML/class 1/index.html
+++ b/HTML/class 1/index.html
@@ -14,9 +14,10 @@
     <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. deserunt!
     </h6>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptate quisquam fugiat, aliquid magni voluptatum laborum, soluta itaque reiciendis et odit veritatis consequatur! Veniam voluptatum omnis non quo voluptatibus, ipsum adipisci recusandae amet distinctio fugiat nulla provident, aspernatur quae, possimus ducimus minima eum doloribus labore! Vel nam tempora illo quidem odio, natus sint ut exercitationem maiores magnam ex fuga labore voluptatibus placeat itaque, adipisci laboriosam officiis dolorum numquam sapiente at tempore impedit sunt. Porro similique voluptates ut fugit dolore! Dolorum in maiores ab nostrum harum totam necessitatibus, minus iusto quos quaerat perspiciatis, maxime veritatis earum, laudantium officia. Explicabo illo quae ipsa sequi ad molestias quod eveniet dolore culpa qui. In rem nemo ab consequuntur error asperiores tenetur tempore consequatur quibusdam, quasi, quos fugit officia cum vero ipsam quis quidem, dolor saepe. Ea sapiente facere at sint explicabo eveniet sequi, corrupti blanditiis. Aspernatur quibusdam exercitationem illum aliquam excepturi dolor rem voluptatibus enim, el</p>
-    <a href="https://www.google.com">google</a>
-    <a href="https://www.amazon.com">amazon</a>
-    <a href="https://www.flipkart.com">flipkart</a>
-     <img src="https://imgs.search.brave.com/nyL8YOUR8zU6nwTiUxuutzuIgQRkkhid0Ljh9cAEGfk/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9jZG4u/bW9zLmNtcy5mdXR1/cmVjZG4ubmV0L3Jq/cUpFS3Y2UDlZank5/ZDNLTUd2cDgtMzIw/LTgwLmpwZw" alt="profile">
+    <a href="https://www.google.com">google</a><br>
+    <a href="https://www.amazon.com">amazon</a><br>
+    <a href="https://www.flipkart.com">flipkart</a><br>
+    
+    <img src="" alt="">
 </body>
 </html>
