--- a/HTML/class 2/index.html
+++ b/HTML/class 2/index.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>class 2</title>
+    <title>my first project</title>
 </head>
 <body>
+    <div>
+<h1>My first project</h1>
+        <img src="https://imgs.search.brave.com/uV8SbXGxNmK1RMTJh3WvqJNyZy2m-1XBnYli5nDqgQ4/rs:fit:500:0:0/g:ce/aHR0cHM6Ly93YWxs/cGFwZXJzLmNvbS9p/bWFnZXMvZmVhdHVy/ZWQvYWJkdWwta2Fs/YW0taGQtbmY1enFr/anMxejZ3aXNxNS5q/cGc" alt="apj abdul kalam photo">
+
+        <h1>Abhijit Mohapatra <SDE-1>(SDE-1)</SPAN> </h1> 
+<ol type="1">
+    what is your favorite language
+    <li>c</li>
+    <li>java</li>
+    <li>python</li>
+    <li>javascript</li>
     
+    
+</ol>
+<ul type="square">
+    what is your favorite language
+    <li>c</li>
+    <li>java</li>
+    <li>python</li>
+    <li>javascript</li>
+</ul>
+    </div>
+    checkbox
+    <table>
+        <tr>
+            <th><u>Name</u> </th>
+            <th><u>Age</u></th>
+            <th><u>City</u></th>
+        </tr>
+        <tr>
+            <th>Jeet</th>
+            <th>21</th>
+            <th>puri</th>
+        </tr>
+
+    </table>
 </body>
 </html>
